fixed positioning of center content on mobile

--- a/styles.css
+++ b/styles.css
@@ -311,8 +311,7 @@ a {
   .center-content {
     width: 100%;
     min-width: 100%;
-    height: 45%;
-    min-height: 315px;
+    height: 238px;
   }
   
   .main-title {
@@ -321,7 +320,7 @@ a {
   
   .center-container {
     width: 100%;
-    height: 50%;
+    height: 110px;
     margin: 0;
   }
   
@@ -341,7 +340,7 @@ a {
     height: 1px;
     background: rgb(207, 206, 206);
     position: relative;
-    top: 30px;
+    top: 18px;
     padding: 0;
     margin: 0 auto;
   }
